# swe4py

./: .gitignore  LICENSE  README.md
exercises/1-1-getting-started/: 1-Install-python.md  2-Using-venvs.md  README.md
exercises/1-2-understanding-python/: README.md
exercises/1-2-understanding-python/3.import-system/: Exercises.md
exercises/1-2-understanding-python/a.core-concepts/: Exercises.md
exercises/1-2-understanding-python/b.import-system/: Exercises.md
exercises/1-3-build-install/01-installer/: .gitignore  README.md
exercises/1-3-build-install/02-compilerbackend/: .gitignore  README.md  meson.build
exercises/1-3-build-install/02-compilerbackend/src/: cpp_extension.cpp
exercises/1-3-build-install/02-compilerbackend/subprojects/: .gitignore
exercises/1-3-build-install/03-backend-peek/: .gitignore  README.md  pyproject.toml
exercises/1-4-collaboration/01-dependency-management/: README.md  pyproject.toml
exercises/1-4-collaboration/04-interactivity/hpc-lib/: README.md  pyproject.toml
exercises/1-4-collaboration/04-interactivity/hpc-lib/src/hpc_lib/: hello.py
exercises/1.decorators/: decorators.py
exercises/2-1-testing/: pytest.ini  requirements.txt
exercises/2-1-testing/01-doctest/: doctest_example.py
exercises/2-1-testing/tests/: conftest.py  test_app.py  test_core.py
exercises/2-2-protocols/protodemo/: pyproject.toml
exercises/2-2-protocols/protodemo/src/protodemo/: __init__.py
slides/: .gitignore  README.md  _slides-example.md  global-bottom.vue  package-lock.json  package.json  serve.sh  slides.md
(+29 files in other folders)
