[project]
name = "protodemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DropD", email = "rico.haeuselmann@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
