[project]
name = "hpc-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DropD", email = "rico.haeuselmann@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipython"]

[tool.uv]
default-groups = ["dev"]
